back up before pull

--- a/anti-sedentary-service/compare_pedja.ipynb
+++ b/anti-sedentary-service/compare_pedja.ipynb
@@ -2,13 +2,320 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime"
+    "import datetime\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs=[f for f in os.listdir('data') if '_data.csv' in f]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df(fn,start,end):\n",
+    "    df = pd.read_csv('data/{}'.format(fn))\n",
+    "    df.index = pd.to_datetime(df['time'])\n",
+    "    df=df.sort_index()\n",
+    "    g = df.groupby(df.index.date)\n",
+    "    to_return = []\n",
+    "    for k,v in g.groups.items():\n",
+    "        if k.month==7 and k.day>=10:\n",
+    "            #print(k)\n",
+    "            day_dict = df.loc[v]\n",
+    "            day_dict = day_dict.loc[(day_dict.index.hour>=start) & (day_dict.index.hour<=end)]\n",
+    "            to_return.append(day_dict)\n",
+    "    \n",
+    "    return to_return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_percent_available_at_beginning_of_run(d):\n",
+    "    xt = pd.Series(d.loc[(d['online_state']==1)]['available'])\n",
+    "    runs = [[10,14],[15,19],[20,23]]\n",
+    "    alls = []\n",
+    "    for r in runs:\n",
+    "        temp = [val for row,val in xt.iteritems() if row.hour>=r[0] and row.hour<r[1]]\n",
+    "        if len(temp)>0:\n",
+    "            alls.append(np.array(temp).mean())\n",
+    "    if len(alls)>0:\n",
+    "        return np.array(alls).mean()\n",
+    "    return -100\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_number_available_at_beginning_of_run(d):\n",
+    "    xt = pd.Series(d.loc[ (d['online_state']==1)]['available'])\n",
+    "    runs = [[10,14],[15,19],[20,23]]\n",
+    "    alls = []\n",
+    "    for r in runs:\n",
+    "        temp = [val for row,val in xt.iteritems() if row.hour>=r[0] and row.hour<r[1]]\n",
+    "        if len(temp)>0:\n",
+    "            alls.append(sum(temp))\n",
+    "    if len(alls)>0:\n",
+    "        return np.array(alls).mean()\n",
+    "    return -100\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_percent_sent_at_beginning_of_run(d):\n",
+    "    xt = pd.Series(d.loc[(d['available']==1 )& (d['online_state']==1)]['action'])\n",
+    "    runs = [[10,14],[15,19],[20,23]]\n",
+    "    alls = []\n",
+    "    for r in runs:\n",
+    "        temp = [val for row,val in xt.iteritems() if row.hour>=r[0] and row.hour<r[1]]\n",
+    "        if len(temp)>0:\n",
+    "            alls.append(np.array(temp).mean())\n",
+    "    if len(alls)>0:\n",
+    "        return np.array(alls).mean()\n",
+    "    return -100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_percent_available_at_end_of_run(d):\n",
+    "    xt = pd.Series(d.loc[ (d['online_state']==1)]['available'])\n",
+    "    runs = [[14,15],[19,20],[23,24]]\n",
+    "    alls = []\n",
+    "    for r in runs:\n",
+    "        temp = [val for row,val in xt.iteritems() if row.hour>=r[0] and row.hour<r[1]]\n",
+    "        if len(temp)>0:\n",
+    "            alls.append(np.array(temp).mean())\n",
+    "    if len(alls)>0:\n",
+    "        return np.array(alls).mean()\n",
+    "    return -100\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_number_available_at_end_of_run(d):\n",
+    "    xt = pd.Series(d.loc[ (d['online_state']==1)]['available'])\n",
+    "    runs = [[14,15],[19,20],[23,24]]\n",
+    "    alls = []\n",
+    "    for r in runs:\n",
+    "        temp = [val for row,val in xt.iteritems() if row.hour>=r[0] and row.hour<r[1]]\n",
+    "        if len(temp)>0:\n",
+    "            alls.append(sum(temp))\n",
+    "    if len(alls)>0:\n",
+    "        return np.array(alls).mean()\n",
+    "    return -100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_percent_sent_at_end_of_run(d):\n",
+    "    xt = pd.Series(d.loc[(d['available']==1 )& (d['online_state']==1)]['action'])\n",
+    "    runs = [[10,15],[15,20],[20,24]]\n",
+    "    alls = []\n",
+    "    for r in runs:\n",
+    "        temp = [val for row,val in xt.iteritems() if row.hour>=r[0] and row.hour<r[1]]\n",
+    "        if len(temp)>0:\n",
+    "            alls.append(np.array(temp).mean())\n",
+    "    if len(alls)>0:\n",
+    "        return np.array(alls).mean()\n",
+    "    return -100\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_user(fn,start,end):\n",
+    "    df = get_df(fn,start,end)\n",
+    "    fractions = [get_percent_available_at_end_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    return fractions.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_beginning_end(fn,start,end):\n",
+    "    df = get_df(fn,start,end)\n",
+    "    fractions = [get_percent_available_at_end_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    end = fractions.mean()\n",
+    "    \n",
+    "    fractions = [get_percent_available_at_beginning_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    start = fractions.mean()\n",
+    "    \n",
+    "    return [start,end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_beginning_end_actions(fn,start,end):\n",
+    "    df = get_df(fn,start,end)\n",
+    "    fractions = [get_percent_sent_at_end_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    end = fractions.mean()\n",
+    "    \n",
+    "    fractions = [get_percent_sent_at_beginning_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    start = fractions.mean()\n",
+    "    \n",
+    "    return [start,end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_runs(series):\n",
+    "    alls = []\n",
+    "    temp = []\n",
+    "    for i in range(len(series)):\n",
+    "        if series[i]==1:\n",
+    "            temp.append(series[i])\n",
+    "        else:\n",
+    "            if len(temp)>0:\n",
+    "                alls.append(temp)\n",
+    "                temp=[]\n",
+    "    if len(temp)>0:\n",
+    "        alls.append(temp)\n",
+    "    return alls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def runs(fn,start,end):\n",
+    "    df = get_df(fn,start,end)\n",
+    "    runs = []\n",
+    "    for d in df:\n",
+    "        if len(d.index)>0:\n",
+    "            runs.extend(get_runs(d['online_state']))\n",
+    "    lens = [len(r) for r in runs]\n",
+    "    if sum(lens)==0:\n",
+    "        return 0\n",
+    "    return np.array(lens).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare_beginning_end_number(fn,start,end):\n",
+    "    df = get_df(fn,start,end)\n",
+    "    fractions = [get_number_available_at_end_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    end = fractions.mean()\n",
+    "    \n",
+    "    fractions = [get_number_available_at_beginning_of_run(d) for d in df if len(d.index)>0]\n",
+    "    fractions = np.array([f for f in fractions if f!=-100])\n",
+    "    start = fractions.mean()\n",
+    "    \n",
+    "    return [start,end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_test-pedja_antised_data.csv\n",
+      "[0.5631112351582005, 0.7663930976430976]\n",
+      "[0.15869577952911285, 0.1728771889486175]\n",
+      "[6.380952380952381, 4.416666666666667]\n",
+      "\n",
+      "\n",
+      "[0.6633789865702228, 0.5980735491998024]\n",
+      "[0.1453591151573373, 0.13404726116768145]\n",
+      "[8.690106619570907, 3.411529051566645]\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_sent  = [[],[]]\n",
+    "average_percent = [[],[]]\n",
+    "average_number = [[],[]]\n",
+    "for fn in fs:\n",
+    "    #print(fn)\n",
+    "    cone = compare_beginning_end(fn,9,21)\n",
+    "    ctwo = compare_beginning_end_actions(fn,9,21)\n",
+    "    cthree = compare_beginning_end_number(fn,9,21)\n",
+    "    if 'pedja' in fn:\n",
+    "        print(fn)\n",
+    "        print(cone)\n",
+    "        print(ctwo)\n",
+    "        print(cthree)\n",
+    "        print('\\n')\n",
+    "    if 'pedja' not in fn and 'mash' not in fn and 'walter' not in fn and 'user_2' not in fn:\n",
+    "        average_percent[0].append(cone[0])\n",
+    "        average_sent[0].append(ctwo[0])\n",
+    "        average_number[0].append(cthree[0])\n",
+    "        average_percent[1].append(cone[1])\n",
+    "        average_sent[1].append(ctwo[1])\n",
+    "        average_number[1].append(cthree[1])\n",
+    "print([np.array(a).mean() for a in average_percent ])\n",
+    "print([np.array(a).mean() for a in average_sent ])\n",
+    "print([np.array(a).mean() for a in average_number ])"
    ]
   },
   {
@@ -22,12 +329,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_test-pedja_antised_data.csv\n",
+      "7.28125\n",
+      "\n",
+      "\n",
+      "9.337154352531526\n"
+     ]
+    }
+   ],
    "source": [
-    "df.index = pd.to_datetime(df['time'])\n",
-    "df=df.sort_index()"
+    "aruns = []\n",
+    "#average_percent = [[],[]]\n",
+    "#average_number = [[],[]]\n",
+    "for fn in fs:\n",
+    "    #print(fn)\n",
+    "    cone = runs(fn,9,21)\n",
+    "\n",
+    "    if 'pedja' in fn:\n",
+    "        print(fn)\n",
+    "        print(cone)\n",
+    "        print('\\n')\n",
+    "    if 'pedja' not in fn and 'mash' not in fn and 'walter' not in fn and 'user_2' not in fn:\n",
+    "        aruns.append(cone)\n",
+    "#print(aruns)\n",
+    "print(np.array(aruns).mean() )\n"
    ]
   },
   {
@@ -21539,57 +21871,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-71-246fa16a9083>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfive_day\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroups\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2019\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m24\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroups\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2019\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m24\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'available'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "five_day = df[g.groups[datetime.date(2019, 7, 24)][0]:g.groups[datetime.date(2019, 7, 24)][-1]]['available']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_runs(series):\n",
-    "    alls = []\n",
-    "    temp = []\n",
-    "    for i in range(len(series)):\n",
-    "        if series[i]==1:\n",
-    "            temp.append(series[i])\n",
-    "        else:\n",
-    "            if len(temp)>0:\n",
-    "                alls.append(temp)\n",
-    "                temp=[]\n",
-    "    if len(temp)>0:\n",
-    "        alls.append(temp)\n",
-    "    return alls"
+    "five_act = df[g.groups[datetime.date(2019, 7, 24)][0]:g.groups[datetime.date(2019, 7, 24)][-1]]['action']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "five_act = df[g.groups[datetime.date(2019, 7, 24)][0]:g.groups[datetime.date(2019, 7, 24)][-1]]['online_state']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[1, 1, 1, 1, 1, 1], [1, 1]]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'five_day' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-196006babd7d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_runs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfive_day\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2019-07-24 15:00:00'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'2019-07-24 17:55:00'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'five_day' is not defined"
+     ]
     }
    ],
    "source": [
@@ -21598,56 +21922,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 1,\n",
-       " 1,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0]"
+       "time\n",
+       "2019-07-24 15:00:00    0\n",
+       "2019-07-24 15:05:00    0\n",
+       "2019-07-24 15:10:00    0\n",
+       "2019-07-24 15:15:00    0\n",
+       "2019-07-24 15:20:00    0\n",
+       "2019-07-24 15:25:00    0\n",
+       "2019-07-24 15:30:00    1\n",
+       "2019-07-24 15:35:00    1\n",
+       "2019-07-24 15:40:00    1\n",
+       "2019-07-24 15:45:00    1\n",
+       "2019-07-24 15:50:00    1\n",
+       "2019-07-24 15:55:00    1\n",
+       "2019-07-24 16:00:00    0\n",
+       "2019-07-24 16:05:00    0\n",
+       "2019-07-24 16:10:00    0\n",
+       "2019-07-24 16:15:00    0\n",
+       "2019-07-24 16:20:00    0\n",
+       "2019-07-24 16:25:00    0\n",
+       "2019-07-24 16:30:00    0\n",
+       "2019-07-24 16:35:00    0\n",
+       "2019-07-24 16:40:00    0\n",
+       "2019-07-24 16:45:00    0\n",
+       "2019-07-24 16:50:00    0\n",
+       "2019-07-24 16:55:00    1\n",
+       "2019-07-24 17:00:00    1\n",
+       "2019-07-24 17:10:00    0\n",
+       "2019-07-24 17:15:00    0\n",
+       "2019-07-24 17:20:00    0\n",
+       "2019-07-24 17:25:00    0\n",
+       "2019-07-24 17:30:00    0\n",
+       "2019-07-24 17:35:00    0\n",
+       "2019-07-24 17:40:00    0\n",
+       "2019-07-24 17:45:00    0\n",
+       "2019-07-24 17:50:00    0\n",
+       "2019-07-24 17:55:00    0\n",
+       "Name: available, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[i for i in five_day['2019-07-24 15:00:00':'2019-07-24 17:55:00']]"
+    "five_day['2019-07-24 15:00:00':'2019-07-24 17:55:00']"
    ]
   },
   {
