--- a/pooling-service/sabina_tmp/in_progress/check_runner.ipynb
+++ b/pooling-service/sabina_tmp/in_progress/check_runner.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import gpytorch\n",
@@ -14,16 +12,15 @@
     "import run_gpytorchkernel\n",
     "import simple_bandits\n",
     "from sklearn import preprocessing\n",
-    "import R_to_python_functions\n",
-    "import json"
+    "import R_to_python_functions as RPY\n",
+    "import json\n",
+    "import hyperparameter_runner"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -32,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os"
@@ -42,56 +37,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/pooling-service/sabina_tmp/in_progress'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def main(data_path):\n",
-    "    result = pyreadr.read_r(data_path)\n",
-    "    baseline_features = ['temperature', 'logpresteps', 'sqrt.totalsteps',\\\n",
-    "                         'dosage', 'engagement', 'work.location', 'other.location', 'variation']\n",
-    "    responsivity_features = ['dosage', 'engagement', 'work.location', 'other.location', 'variation']\n",
-    "    data_dict = process_data(result['train.dat'],baseline_features)\n",
-    "    standard_x = get_standard_x(data_dict['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "data_path = '../../data/train_EB.RData'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users,data,y = RPY.combine_users('../../../walking-suggestion-service/data',set(['test-pedja','test-nickreid']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data_path = '../../../walking-suggestion-service/data/usertest-nickreid/train.RData'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#result = pyreadr.read_r(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = hyperparameter_runner.real_run(data,users,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_for_a_user():\n",
+    "    pass\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "baseline_features = ['temperature', 'logpresteps', 'sqrt.totalsteps',\\\n",
@@ -101,49 +109,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def get_standard_x(X):\n",
-    "    return preprocessing.StandardScaler().fit_transform(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "standard_x = get_standard_x(data_dict['data'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fake_data(n):\n",
-    "    #temperature, last steps, prior,location\n",
-    "    return [[np.random.random()*50+10,np.random.random()*30,np.random.random()*20,int(np.random.random()>.5)] for i in range(n)]"
+    "#result['data.history']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data = fake_data(100)"
+    "#test = main(data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stuff = RPY.process_data(result['train'],baseline_features,'test-pedja')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sx = RPY.get_standard_x(stuff['data'])"
    ]
   },
   {
@@ -236,18 +233,6 @@
     "    #to_adjust = np.ones(len(to_return[0]))\n",
     "    y = np.array([all_dict['reward'][i]-np.dot(to_return[i],to_adjust) for i in range(len(to_return))])\n",
     "    return np.array(to_return),y,np.array(users)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "data_dict = process_data(result['train.dat'],baseline_features)\n",
-    "standard_x = get_standard_x(data_dict['data'])"
    ]
   },
   {
@@ -409,41 +394,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_dict = '{\"users\":[\"foo\",\"bar\"]}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-0.18712527,  0.32614318,  0.        , -0.06628575,  0.        ,\n",
-       "         0.93582842]),\n",
-       " [array([ 0.54548707, -0.18460375,  0.        ,  0.00227221,  0.        ,\n",
-       "          0.12541985]),\n",
-       "  array([ -1.84603747e-01,   8.54974941e-01,   0.00000000e+00,\n",
-       "           1.06562680e-04,   0.00000000e+00,   1.93457569e-02]),\n",
-       "  array([ 0.,  0.,  1.,  0.,  0.,  0.]),\n",
-       "  array([  2.27220866e-03,   1.06562680e-04,   0.00000000e+00,\n",
-       "           1.10233751e+00,   0.00000000e+00,  -1.16999239e-03]),\n",
-       "  array([ 0.,  0.,  0.,  0.,  1.,  0.]),\n",
-       "  array([ 0.12541985,  0.01934576,  0.        , -0.00116999,  0.        ,\n",
-       "          0.67793525])])"
+       "{'users': ['foo', 'bar']}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp"
+    "json.loads(a_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/sabina/heartsteps/pooling-service/sabina_tmp/in_progress'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
