--- a/pooling-service/new_training_data.ipynb
+++ b/pooling-service/new_training_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,21 +20,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = [u for u in os.listdir('../walking-suggestion-service/data') if 'user' in u and 'pooled' not in u and 'test' not in u]\n",
+    "users = [u for u in os.listdir('data') if 'user' in u and 'pooled' not in u and 'test' not in u]\n",
     "ul = {users[i].strip('user'):i for i in range(len(users))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "uls = [u.strip('user') for u in users]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['10217',\n",
+       " '10157',\n",
+       " '10195',\n",
+       " '10307',\n",
+       " '10399',\n",
+       " '10118',\n",
+       " '10187',\n",
+       " '10142',\n",
+       " '10110',\n",
+       " '10261',\n",
+       " '10008',\n",
+       " '10006',\n",
+       " '10055',\n",
+       " '10027',\n",
+       " '10214',\n",
+       " '10075',\n",
+       " '10101',\n",
+       " '10137',\n",
+       " '10199',\n",
+       " '10342',\n",
+       " '10389',\n",
+       " '10327',\n",
+       " '10178',\n",
+       " '10388',\n",
+       " '10296',\n",
+       " '10032']"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uls"
    ]
   },
   {
