--- a/pooling-service/new_training_data.ipynb
+++ b/pooling-service/new_training_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,22 +15,43 @@
     "import pickle\n",
     "import sys\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = [u for u in os.listdir('data') if 'user' in u and 'pooled' not in u and 'test' not in u]\n",
+    "users = [u for u in os.listdir('data') if 'user' in u and 'pooled' not in u and 'test' not in u  and u[4:] in RPY.get_user_ids()]\n",
     "ul = {users[i].strip('user'):i for i in range(len(users))}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10217'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "users[0][4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +68,6 @@
       "text/plain": [
        "['10217',\n",
        " '10157',\n",
-       " '10195',\n",
        " '10307',\n",
        " '10399',\n",
        " '10118',\n",
@@ -60,7 +80,6 @@
        " '10055',\n",
        " '10027',\n",
        " '10214',\n",
-       " '10075',\n",
        " '10101',\n",
        " '10137',\n",
        " '10199',\n",
@@ -73,7 +92,7 @@
        " '10032']"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,6 +186,28 @@
    ],
    "source": [
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 2, 0],\n",
+       "       [0, 0, 3]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.diag([1,2,3])"
    ]
   },
   {
