--- a/pooling-service/new_training_data.ipynb
+++ b/pooling-service/new_training_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "38"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,80 +198,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "EOFError",
-     "evalue": "Ran out of input",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-5fc7e92599b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../../Downloads/pooled_hyper_pooled_init_params_2019-09-25.pkl'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mEOFError\u001b[0m: Ran out of input"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('../../Downloads/pooled_hyper_pooled_init_params_2019-09-25.pkl','rb') as f:\n",
+    "with open('../../Documents/pooled_hyper_pooled_init_params_2019-09-25.pkl','rb') as f:\n",
     "    test = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/sabina/heartsteps/pooling-service'"
+       "{'sigma_u': array([[1.5898    , 0.0979    ],\n",
+       "        [0.0979    , 0.68279999]]), 'noise_term': 5.544000148773193}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "os.getcwd()"
+    "test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s='s'\n",
-    "c=s=='s'"
+    "with open('../../Documents/pooled_init_params.pkl','rb') as f:\n",
+    "    test = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "c\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -441,13 +409,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-08-08</th>\n",
-       "      <td>10389</td>\n",
+       "      <td>10307</td>\n",
        "      <td>2019-08-08</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-08-08</th>\n",
-       "      <td>10307</td>\n",
+       "      <td>10389</td>\n",
        "      <td>2019-08-08</td>\n",
        "      <td>14</td>\n",
        "    </tr>\n",
@@ -561,15 +529,27 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-07</th>\n",
-       "      <td>10215</td>\n",
+       "      <td>10313</td>\n",
        "      <td>2019-10-07</td>\n",
        "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-10-07</th>\n",
-       "      <td>10313</td>\n",
+       "      <td>10215</td>\n",
        "      <td>2019-10-07</td>\n",
        "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-08</th>\n",
+       "      <td>10395</td>\n",
+       "      <td>2019-10-08</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-10-09</th>\n",
+       "      <td>10152</td>\n",
+       "      <td>2019-10-09</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -591,8 +571,8 @@
        "2019-07-25   10327 2019-07-25  10\n",
        "2019-08-05   10137 2019-08-05  11\n",
        "2019-08-05   10137 2019-08-05  12\n",
-       "2019-08-08   10389 2019-08-08  13\n",
-       "2019-08-08   10307 2019-08-08  14\n",
+       "2019-08-08   10307 2019-08-08  13\n",
+       "2019-08-08   10389 2019-08-08  14\n",
        "2019-08-09   10342 2019-08-09  15\n",
        "2019-08-19   10199 2019-08-19  16\n",
        "2019-08-24   10101 2019-08-24  17\n",
@@ -611,11 +591,13 @@
        "2019-09-23   10355 2019-09-23  30\n",
        "2019-09-29   10374 2019-09-29  31\n",
        "2019-09-29   10062 2019-09-29  32\n",
-       "2019-10-07   10215 2019-10-07  33\n",
-       "2019-10-07   10313 2019-10-07  34"
+       "2019-10-07   10313 2019-10-07  33\n",
+       "2019-10-07   10215 2019-10-07  34\n",
+       "2019-10-08   10395 2019-10-08  35\n",
+       "2019-10-09   10152 2019-10-09  36"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,6 +614,95 @@
    "source": [
     "avoids = 10217"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[0.9097351  0.0152902  0.46904329 0.29253298 0.30764391]\n",
+      "1\n",
+      "[0.83290138 0.0152902  0.46904329 0.29253298 0.30764391]\n",
+      "2\n",
+      "[0.97239582 0.0152902  0.46904329 0.29253298 0.30764391]\n",
+      "3\n",
+      "[0.84730452 0.0152902  0.46904329 0.29253298 0.30764391]\n",
+      "4\n",
+      "[0.76845389 0.0152902  0.46904329 0.29253298 0.30764391]\n",
+      "6\n",
+      "[1.11247447 0.0152902  0.46904329 0.29253298 0.30764391]\n",
+      "7\n",
+      "[1.0351125  0.0152902  0.46904329 0.29253298 0.30764391]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in test.items():\n",
+    "    print(k)\n",
+    "    print(np.diagonal(v[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../../heartsteps/pooling-service/data/test.pkl','rb') as f:\n",
+    "    test2 = pickle.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[0.8958948  0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[ 1.09011411 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n",
+      "1\n",
+      "[0.82865585 0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[ 1.38946276 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n",
+      "2\n",
+      "[0.95088923 0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[-0.24085202 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n",
+      "3\n",
+      "[0.84527175 0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[ 0.04133162 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n",
+      "4\n",
+      "[0.76611201 0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[ 0.03881522 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n",
+      "6\n",
+      "[1.0834761  0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[-0.05949976 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n",
+      "7\n",
+      "[1.0150732  0.01496935 0.45973089 0.28875531 0.30334674]\n",
+      "[-0.04171055 -0.07269239  0.10010151 -0.14683339 -0.0511453 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in test2.items():\n",
+    "    print(k)\n",
+    "    print(np.diagonal(v[1]))\n",
+    "    print(v[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
