--- a/pooling-service/with_join_dates-Copy1.ipynb
+++ b/pooling-service/with_join_dates-Copy1.ipynb
@@ -238,49 +238,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x,y,locs,days,probs,actions = RPY.get_all_for_one_user('./data',str(10339))"
+    "x,y,locs,days,probs,actions = RPY.get_all_for_one_user('./data',str(10041))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('data/test_2019-10-24.pkl','rb') as f:\n",
-    "    t = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xx=[x[i][8]+x[i][13] for i in range(len(x))]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{True}"
+       "Timedelta('39 days 00:00:00')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "pd.to_datetime('10/23/2019')-pd.to_datetime('09/14/2019')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "87"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([d for d in days if d<39])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/test_2019-11-13.pkl','rb') as f:\n",
+    "    t = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (array([-0.12773142,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.49333921, -0.23521064, -0.02971367, -0.03385584, -0.06862545]),\n",
+       "   array([-0.23521064,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.02971367, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.03385584, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06862545,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 1: (array([-0.2068229 ,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.2518654 , -0.2343601 , -0.03173886, -0.02369447, -0.06266583]),\n",
+       "   array([-0.2343601 ,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03173886, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02369447, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06266583,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 2: (array([ 0.40263855,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.29388129, -0.49380591,  0.03378608, -0.09647516, -0.07271866]),\n",
+       "   array([-0.49380591,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([ 0.03378608, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.09647516, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.07271866,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 3: (array([ 0.11945657,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.30631085, -0.2892685 , -0.03688131, -0.00782667, -0.06182914]),\n",
+       "   array([-0.2892685 ,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03688131, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.00782667, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06182914,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 4: (array([-0.4915498 ,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.3520675 , -0.50567791, -0.10569002, -0.00248823, -0.07895756]),\n",
+       "   array([-0.50567791,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.10569002, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.00248823, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.07895756,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 5: (array([ 0.10051021,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.44161194, -0.35457951, -0.06210324, -0.01864302, -0.03875461]),\n",
+       "   array([-0.35457951,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.06210324, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.01864302, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.03875461,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 6: (array([ 0.04682967,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.68489654, -0.29313618, -0.03529649, -0.02491385, -0.0653219 ]),\n",
+       "   array([-0.29313618,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03529649, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02491385, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.0653219 ,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 8: (array([-0.24084732,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.58299914, -0.28116521, -0.02928841, -0.02137127, -0.0647794 ]),\n",
+       "   array([-0.28116521,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.02928841, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02137127, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.0647794 ,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 9: (array([ 0.18321815,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.3982644 , -0.23036893, -0.01914999, -0.06602332, -0.05045969]),\n",
+       "   array([-0.23036893,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.01914999, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.06602332, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.05045969,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 11: (array([-0.02519276,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.67567676, -0.2932095 , -0.03510325, -0.02588545, -0.0641497 ]),\n",
+       "   array([-0.2932095 ,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03510325, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02588545, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.0641497 ,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 12: (array([-0.01414256,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.37756049, -0.32009153, -0.0250532 , -0.01665783, -0.04674151]),\n",
+       "   array([-0.32009153,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.0250532 , -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.01665783, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.04674151,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 13: (array([-0.20417866,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.6381337 , -0.27574793, -0.04030645, -0.02003064, -0.06921385]),\n",
+       "   array([-0.27574793,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.04030645, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02003064, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06921385,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 14: (array([-0.58350512,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.41663651, -0.22275407, -0.01223534, -0.02012715, -0.09874254]),\n",
+       "   array([-0.22275407,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.01223534, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02012715, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.09874254,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 15: (array([-0.43554704,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.46583201, -0.24931113, -0.04698515, -0.01601962, -0.06171791]),\n",
+       "   array([-0.24931113,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.04698515, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.01601962, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06171791,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 16: (array([-0.10656889,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.6530338 , -0.28963082, -0.03365098, -0.02567641, -0.06616369]),\n",
+       "   array([-0.28963082,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03365098, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.02567641, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06616369,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 17: (array([-0.27074794,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.67518912, -0.29299946, -0.03447294, -0.0255357 , -0.06501954]),\n",
+       "   array([-0.29299946,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03447294, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.0255357 , -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06501954,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 18: (array([ 0.10691394,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.61685405, -0.27587461, -0.03249258, -0.0250163 , -0.06149575]),\n",
+       "   array([-0.27587461,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.03249258, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.0250163 , -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.06149575,  0.00501296, -0.02860114, -0.03189877,  0.16476808])]),\n",
+       " 19: (array([-0.65042092,  0.21322743,  0.22186475, -0.1127984 , -0.60734562]),\n",
+       "  [array([ 0.50552427, -0.24933043, -0.04115718, -0.01274511, -0.0607567 ]),\n",
+       "   array([-0.24933043,  0.65306379, -0.01581673, -0.00215144,  0.00501296]),\n",
+       "   array([-0.04115718, -0.01581673,  0.20485539, -0.0686112 , -0.02860114]),\n",
+       "   array([-0.01274511, -0.00215144, -0.0686112 ,  0.17267788, -0.03189877]),\n",
+       "   array([-0.0607567 ,  0.00501296, -0.02860114, -0.03189877,  0.16476808])])}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.16086440000000013"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot([0.3048675,  1.0812182, -0.6133699, -0.5509930, -0.3825872],np.ones(5))"
+   ]
   },
   {
    "cell_type": "code",
